# Game2d

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt  main.cpp
sources/game_engine/: CMakeLists.txt  main.cpp
sources/tools/: CMakeLists.txt  ConfiguringWidgetQt.cpp  ConfiguringWidgetQt.hpp  TilingWidgetQt.cpp  TilingWidgetQt.hpp  main.cpp
